--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Barcode</string>
+    <string name="app_name">GS1 Uganda</string>
     <string name="product_id">Enter Product Id</string>
     <string name="generate">Generate</string>
-    <string name="scan">Scan</string>
+    <string name="scan">Verify Barcode</string>
 </resources>
